--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 ./.idea
-./qr_code.png
+qr_code.png
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+asdf
